# screenshot-to-json

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  install.ps1  install.sh  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-06-01-ai-default-config.md  2026-06-01-curl-installers-ai-detection.md  2026-06-01-simple-installer-wizard.md
docs/superpowers/specs/: 2026-06-01-ai-default-config-design.md  2026-06-01-command-wizard-autodetection-design.md  2026-06-01-curl-installers-ai-detection-design.md  2026-06-01-simple-installer-wizard-design.md
src/ss2json/: __init__.py  ai_env.py  cli.py  config.py
tests/: test_ai_env.py  test_cli.py  test_config.py  test_installers.py
