[build-system]
requires = ["setuptools>=77.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ss2json"
version = "0.1.0"
description = "macOS CLI tool to capture screen regions and extract structured JSON via AI vision"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "ss2json contributors" },
]
keywords = ["screenshot", "vision", "AI", "JSON", "macOS", "CLI"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Utilities",
]
dependencies = [
    "httpx>=0.27.0",
    "Pillow>=10.0.0",
    "rich>=13.0.0",
]

[project.scripts]
ss2json = "ss2json.cli:main"

[project.optional-dependencies]
dev = [
    "build>=1.2",
    "pytest>=8.0",
    "ruff>=0.3.0",
    "twine>=5.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-v --tb=short"
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["ss2json*"]
